<resources>
    <string name="app_name">RecipeCollection</string>

    <string name="main">Main</string>
    <string name="tools">Tools</string>
    <string name="favorites">Favorites</string>
    <string name="my_diet">My diet</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="my_menu">My menu</string>

    <string name="kcal">kcal</string>

    <!--RecipeDetail-->
    <string name="source">Source</string>
    <string name="recipe">Recipe:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="more">More</string>
    
    <!--Detail search-->
    <string name="diet_label">Diet label</string>
    <string name="health_label">Health label</string>
    <string name="ingr_label">Maximum number of ingredients</string>
    <string name="cal_label">Kcal per serving</string>
    <string name="hint_query">Search query</string>
    <string name="nothing_found">Nothing found</string>

    <!--CustomDialog-->
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_error">Error</string>
    <string name="text_warning">Warning</string>

    <!--MyMenu-->
    <string name="hint_menu_name">Menu name</string>
    <string name="max_cal_label">Maximum calories per day</string>
    <string name="recommended">"Recommended: "</string>
    <string name="apply">Apply</string>
    <string name="setup_menu">Setup menu</string>
    <string name="refresh_confirm">Are you sure you want to refresh your menu?</string>
    <string name="menu_error">Sorry, error occurred while composing menu. Try with another parameters.</string>
    <string name="per_serving">per serving</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="day_of_week_0">Monday</string>
    <string name="day_of_week_1">Tuesday</string>
    <string name="day_of_week_2">Wednesday</string>
    <string name="day_of_week_3">Thursday</string>
    <string name="day_of_week_4">Friday</string>
    <string name="day_of_week_5">Saturday</string>
    <string name="day_of_week_6">Sunday</string>

    <!--MyDiet-->
    <string name="calculate_calories">Calculate calories</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="height_cm">Height(cm)</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="physical_activity">Physical activity</string>
    <string name="saved">Saved</string>

    <!--Error messages-->
    <string name="error_request_limit">Request limit exceeded</string>
    <string name="error_unknown">Unknown error</string>
    
    <!--Diet labels-->
    <string-array name="diet_labels" >
        <item>None</item>
        <item>Balanced</item>
        <item>High protein</item>
        <item>High fiber</item>
        <item>Low fat</item>
        <item>Low sodium</item>
    </string-array>

    <!--Health labels-->
    <string-array name="health_labels" >
        <item>None</item>
        <item>Tree nut free</item>
        <item>Peanut free</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
    </string-array>

    <string-array name="activity_labels" >
        <item>Passive lifestyle</item>
        <item>Moderate activity (1–3 times per week)</item>
        <item>Average activity (3–5 times per week)</item>
        <item>High activity (6–7 times per week)</item>
        <item>High sport activity (6–7 times per week)</item>
    </string-array>

    <string-array name="sex_labels" >
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
