<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_main"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/ic_main"
            android:title="@string/app_name" />
    </group>

    <item android:title="@string/tools">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_main"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_main"
        android:title="@string/share" />

</menu>
