<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textColor="@android:color/black"
                android:gravity="center"
                tools:text="Some dialog title"/>

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                tools:text="Some dialog text"/>

            <View
                android:background="@color/colorDivider"
                android:layout_width = "fill_parent"
                android:layout_height="1px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_yes"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:enabled="true"
                    android:background="@null"
                    style="?android:attr/borderlessButtonStyle"
                    android:textSize="16sp"
                    android:text="@string/text_yes"/>

                <LinearLayout
                    android:id="@+id/ll_no"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:visibility="visible"
                    android:layout_height="match_parent">

                    <View
                        android:background="@color/colorDivider"
                        android:layout_width = "1px"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/btn_no"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:textAllCaps="false"
                        android:enabled="true"
                        android:background="@null"
                        style="?android:attr/borderlessButtonStyle"
                        android:textSize="16sp"
                        android:text="@string/text_no"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:visibility="gone"
                    android:layout_height="match_parent">

                    <View
                        android:background="@color/colorDivider"
                        android:layout_width = "1px"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="match_parent"
                        android:textAllCaps="false"
                        android:enabled="true"
                        android:background="@null"
                        style="?android:attr/borderlessButtonStyle"
                        android:textSize="16sp"
                        android:text="@string/text_cancel"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>